# exploring-backend-with-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README  docker-compose.yaml
db/: init.sql
src/: main.rs  routers.rs
src/auth/: jwt_auth.rs
src/handlers/: login_handler.rs  mod.rs  protected_handler.rs  readyz_handler.rs  score_handler.rs  users_handler.rs  utils.rs
src/models/: users.rs
