[package]
edition = "2021"
name = "my-first-api-project"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.34"
jsonwebtoken = "9.2.0"
openssl-sys = "0.9.103"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
sqlx = {version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"]}
tokio = {version = "1.39.2", features = ["full"]}
tower-http = {version = "0.5.0", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
